[gd_scene load_steps=7 format=3 uid="uid://bbv1udoew5wi5"]

[ext_resource type="Script" uid="uid://bpc74ym7807e7" path="res://deathscreen/deathscreen.gd" id="1_1oauk"]
[ext_resource type="Texture2D" uid="uid://dqbokywe742aq" path="res://textures/Effects/You died Screen.png" id="2_42vcn"]
[ext_resource type="Resource" uid="uid://hxxvjhvx703k" path="res://deathscreen/score.tres" id="2_e4d0d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gee14"]
atlas = ExtResource("2_42vcn")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tnpc"]
atlas = ExtResource("2_42vcn")
region = Rect2(0, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u5sy4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gee14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tnpc")
}],
"loop": true,
"name": &"you died",
"speed": 5.0
}]

[node name="deathscreen" type="CanvasLayer"]
script = ExtResource("1_1oauk")
scores = ExtResource("2_e4d0d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(571, 321)
scale = Vector2(18.0234, 20.6328)
sprite_frames = SubResource("SpriteFrames_u5sy4")
animation = &"you died"
autoplay = "you died"

[node name="Button" type="Button" parent="."]
offset_left = 821.0
offset_top = 443.0
offset_right = 933.0
offset_bottom = 512.0
text = "try again?"

[node name="HiScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.024
anchor_bottom = 0.088
offset_left = 51.0
offset_top = 322.0
offset_right = 271.352
offset_bottom = 340.976
theme_override_font_sizes/font_size = 40
text = "high score"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 87.0
offset_top = 418.0
offset_right = 211.0
offset_bottom = 476.0
theme_override_font_sizes/font_size = 30
text = "score"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
